Corrected focus z-index

--- a/src/components/TutorialMask/style.scss
+++ b/src/components/TutorialMask/style.scss
@@ -18,7 +18,7 @@
         width: 12vw;
         height: 12vw;
         border-radius: 50%;
-        z-index: 9;
+        z-index: 5;
         box-shadow: 0 0 0 100vh rgba(white, 0.7);
     }
 
